vote-result/result-service.yml
apiVersion: v1
kind: Service
metadata:
  name: result
  labels:
    app: result
spec:
  type: LoadBalancer
  ports:
    - name: result
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: result
