vote-result/vote-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    app: vote
spec:
  type: LoadBalancer
  ports:
    - name: vote
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: vote
